# FileBuffer

./: CMakeLists.txt  README.md
src/: FileBuffer.cpp  FileBuffer.hpp
src/getFileSize/: getFileSize.cpp  getFileSize.hpp
